kubernetes/completion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: completion-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: completion
  template:
    metadata:
      labels:
        app: completion
    spec:
      containers:
      - name: completion
        image: ghcr.io/uengine-oss/process-gpt-completion:3482b0e
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: completion-service
spec:
  selector:
    app: completion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
