kubernetes/supabase-realtime-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supabase-realtime-service
spec:
  selector:
    app: realtime-dev-supabase-realtime
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
